--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "js-atom": "^0.4.0",
     "nanohtml": "^1.2.4",
     "nanologger": "^1.3.1",
+    "page": "^1.10.1",
     "soshi": "^1.0.4"
   },
   "devDependencies": {
