--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "a aliexpress fashion app",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --content-base build --hot --inline",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +22,7 @@
     "fairybread": "^2.0.1",
     "firebase": "^5.5.0",
     "js-atom": "^0.4.0",
+    "lit-element": "^0.5.0",
     "nanohtml": "^1.2.4",
     "nanologger": "^1.3.1",
     "page": "^1.10.1",
