--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
+    "source-map-loader": "^0.2.4",
+    "typescript": "^3.0.3",
     "webpack": "^4.19.1",
+    "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
   }
 }
