--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a aliexpress fashion app",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --content-base build --hot --inline",
+    "start": "webpack-dev-server --content-base dist --hot --inline",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
