--- a/package.json
+++ b/package.json
@@ -18,19 +18,20 @@
   },
   "homepage": "https://github.com/stagfoo/yaeba#readme",
   "dependencies": {
+    "@polymer/lit-element": "^0.6.1",
     "@types/node": "^10.10.1",
     "animejs": "^2.2.0",
     "fairybread": "^2.0.1",
     "firebase": "^5.5.0",
     "js-atom": "^0.4.0",
-    "lit-element": "^0.5.0",
+    "morphdom": "^2.3.3",
     "nanohtml": "^1.2.4",
     "nanologger": "^1.3.1",
-    "page": "^1.10.1",
-    "soshi": "^1.0.4"
+    "page": "^1.10.1"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
+    "lit-element": "^0.5.0",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.0.3",
     "webpack": "^4.19.1",
