State is finally an object

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
       "jsx": "react",
       "module": "esnext",
       "declaration": true,
+      "experimentalDecorators": true,
       "moduleResolution": "node"
     },
     "exclude": [
