--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "dependencies": {
     "@polymer/lit-element": "^0.6.1",
     "@types/node": "^10.10.1",
+    "@vaadin/router": "^1.1.0",
     "animejs": "^2.2.0",
     "fairybread": "^2.0.1",
     "firebase": "^5.5.0",
     "js-atom": "^0.4.0",
+    "lit-html": "^0.11.4",
     "morphdom": "^2.3.3",
     "nanohtml": "^1.2.4",
     "nanologger": "^1.3.1",
