--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vaadin/router": "^1.1.0",
     "animejs": "^2.2.0",
     "fairybread": "^2.0.1",
+    "feather-icons": "^4.7.3",
     "firebase": "^5.5.0",
     "js-atom": "^0.4.0",
     "lit-html": "^0.11.4",
