--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --content-base dist --hot --inline",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "surge ./dist http://yaeba.surge.sh",
+    "build": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -37,6 +38,7 @@
     "lit-element": "^0.5.0",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.0.3",
+    "unirest": "^0.5.1",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
