--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
+    "inquirer": "^6.2.0",
     "lit-element": "^0.5.0",
+    "lodash": "^4.17.11",
+    "shelljs": "^0.8.2",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.0.3",
     "unirest": "^0.5.1",
