--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "morphdom": "^2.3.3",
     "nanohtml": "^1.2.4",
     "nanologger": "^1.3.1",
-    "page": "^1.10.1"
+    "page": "^1.10.1",
+    "surge": "^0.20.1"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
